# konjingjing

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  mise.toml  mkdocs.yml  sitemap.xml
algorithm/: index.html
api/node/: index.html
api/python/: index.html
api/rust/: index.html
api/wasm/: index.html
data/person-types/: index.html
data/provinces/: index.html
docs/: algorithm.md  getting-started.md  index.md
docs/api/: node.md  python.md  rust.md  wasm.md
docs/data/: person-types.md  provinces.md
docs/overrides/: main.html
getting-started/: index.html
overrides/: main.html
search/: search_index.json
