[workspace]
resolver = "2"
members = [
    "packages/konjingjing",
    "packages/konjingjing-python",
    "packages/konjingjing-node",
    "packages/konjingjing-wasm",
]

[workspace.package]
version = "1.0.0"
authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
license = "ISC"
repository = "https://github.com/ninyawee/konjingjing"
